# OpenCL_3D_Engine

./: CMakeLists.txt  LICENSE  README.md
sources/: glut_win.cpp  test.cpp  win_3d_engine.cpp  win_3d_engine.hpp
